syntax = "proto3";
package pocket.gateway;

option go_package = "github.com/pokt-network/poktroll/x/gateway/types";
option (gogoproto.stable_marshaler_all) = true;

import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";

import "pocket/gateway/types.proto";
import "pocket/gateway/params.proto";

// EventGatewayStaked is emitted when a gateway is staked or up-staked.
message EventGatewayStaked {
  // The gateway that has been staked.
  Gateway gateway = 1 [(gogoproto.jsontag) = "gateway"];
  // The end height of the session in which gateway was staked.
  int64 session_end_height = 2 [(gogoproto.jsontag) = "session_end_height"];
}

// EventGatewayUnbondingBegin is emitted when a gateway begins unbonding.
// It is triggered by the commitment of an unstake gateway message.
// This event signals that a gateway has begun unbonding.
// The unbonding period is determined by the shared param gateway_unbonding_period_sessions.
message EventGatewayUnbondingBegin {
  pocket.gateway.Gateway gateway = 1 [(gogoproto.jsontag) = "gateway"];
  // The end height of the session in which the unbonding began.
  int64 session_end_height = 3 [(gogoproto.jsontag) = "session_end_height"];
  // The height at which gateway unbonding will end.
  int64 unbonding_end_height = 4 [(gogoproto.jsontag) = "unbonding_height"];
}

// EventGatewayUnbondingEnd is emitted when a gateway has completed unbonding.
// The unbonding period is determined by the shared param gateway_unbonding_period_sessions.
message EventGatewayUnbondingEnd {
  // The gateway that has completed unbonding.
  pocket.gateway.Gateway gateway = 1 [(gogoproto.jsontag) = "gateway"];
  // The end height of the session in which the unbonding began.
  int64 session_end_height = 3 [(gogoproto.jsontag) = "session_end_height"];
  // The height at which gateway unbonding will end.
  int64 unbonding_end_height = 4 [(gogoproto.jsontag) = "unbonding_height"];
}

// EventGatewayUnbondingCanceled is emitted when a gateway which was unbonding
// successfully (re-)stakes before the unbonding period has elapsed.
// An EventGatewayStaked event will also be emitted immediately after this event.
message EventGatewayUnbondingCanceled {
  pocket.gateway.Gateway gateway = 1 [(gogoproto.jsontag) = "gateway"];
  // The end height of the session in which the unbonding was canceled.
  int64 session_end_height = 2 [(gogoproto.jsontag) = "session_end_height"];
}

// EventParamsActivated is emitted when the module params update becomes effective.
// It signals that a scheduled parameter update has been activated at the current block height,
// indicating that new parameter values are now in effect.
message EventParamsActivated {
  // params_update contains the newly activated parameter values along with their
  // activation and deactivation heights.
  // This provides information about the parameter change that just took effect,
  // allowing clients to adjust to the new protocol parameters.
  pocket.gateway.ParamsUpdate params_update = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (gogoproto.jsontag) = "params_update"
  ];
}
